fix: z-index

--- a/src/Pages/LoginPage/LoginPage.css
+++ b/src/Pages/LoginPage/LoginPage.css
@@ -18,6 +18,11 @@
     background-size: contain; 
     background-repeat: no-repeat;
     background-position: left;
+    z-index: 0;
+}
+
+.login-content{
+    z-index: 1;
 }
 
 .login-title{
